<resources>
    <string name="app_name">TahsinMQI</string>
    <string name="title_home">Home</string>
    <string name="title_alquran">Al-Qur\'an</string>
    <string name="title_tanya_ai">Tanya AiTahsin</string>
    <string name="title_material">Materi</string>
    <string name="title_tahsin">Tahsin</string>
    <string name="title_kelas_tahsn">Kelas Tahsin</string>
    <string name="title_bada_maghrib">Ba\'da Maghrib</string>
    <string name="title_tahsin_desc">Kelas Tahsin MQI adalah kegiatan rutin belajar Al-Qur\'an setiap sabtu malam atau malam minggu. Terbuka untuk anak muda dan orang tua.</string>
    <string name="title_sub_material_chapter_two">Materi Chapter 2</string>
    <string name="title_material_chapter_three">Materi Chapter 3</string>
    <string name="title_material_chapter_four">Materi Chapter 4</string>
    <string name="title_material_chapter_five">Materi Chapter 5</string>
    <string name="title_material_chapter_six">Materi Chapter 6</string>
    <string name="title_material_chapter_seven">Materi Chapter 7</string>
    <string name="title_material_chapter_eight">Materi Chapter 8</string>
    <string name="title_material_chapter_nine">Materi Chapter 9</string>
    <string name="title_material_chapter_ten">Materi Chapter 10</string>
    <string name="title_material_chapter_eleven">Materi Chapter 11</string>

    <string name="title_material_name_placeholder">Material Name Placeholderr</string>
    <string name="title_material_desc_placeholder">Material Desc Placeholderr</string>
    <string name="title_show_material">Lihat Materi</string>
    <string name="title_show_all_material">Lihat Semua</string>

    <!--    Title for Schedule-->
    <string name="title_schedule">Jadwal </string>
    <string name="title_schedule_sholat">Jadwal Sholat</string>

    <!--    Sub-title for Schedule-->
        <string name="jadwal_sholat_sub_title">Jadwal Sholat</string>
        <string name="jadwal_tahsin_sub_title">Jadwal Tahsin</string>

    <string name="title_date">Tanggal</string>
    <string name="title_imsak">Imsak</string>
    <string name="title_shubuh">Shubuh</string>
    <string name="title_syuruk">Syuruk</string>
    <string name="title_dzuhur">Dzuhur</string>
    <string name="title_ashar">Ashar</string>
    <string name="title_maghrib">Maghrib</string>
    <string name="title_isya">Isya</string>
    <string name="placeholder_current_time">10:00 am</string>
    <string name="placeholder_current_date">...</string>
    <string name="placeholder_welcome">Halo, Jamaah Tahsin \n MQI!</string>
    <string name="placeholder_location">Kota, Provinsi</string>
    <string name="placeholder_location_kab_sleman">Kab. Sleman</string>
    <string name="placeholder_imsak_time">00:00</string>
    <string name="placeholder_shubuh_time">00:00</string>
    <string name="placeholder_syuruk_time">00:00</string>
    <string name="placeholder_dzuhur_time">00:00</string>
    <string name="placeholder_ashar_time">00:00</string>
    <string name="placeholder_maghrib_time">00:00</string>
    <string name="placeholder_isya_time">00:00</string>

    <string name="title_source">Sumber: Web Kemenag</string>

    <string name="placeholder_surah_name">...</string>
    <string name="placeholder_surah_number">000</string>
    <string name="placeholder_surah_total_verse">100 Ayahs</string>

    <string name="placeholder_verse_number">000</string>
    <string name="placeholder_verse">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</string>
    <string name="placeholder_verse_translation">In the Name of Allah—the Most Compassionate, Most Mercifulِ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Title for action material section-->
    <string name="audio">Audio</string>
    <string name="contoh">Contoh</string>
    <string name="stop">Stop</string>

    <!--    Title for Chapter 2 Material section-->
    <string name="title_material_al_jauf">Al-Jauf - Rongga Mulut</string>
        <string name="content_aljauf_hamzah_and_ha_besar">Huruf yang keluar dari tenggorokan bawah adalah Hamzah (ء), Ha besar (ه).</string>
        <string name="content_aljauf_ain_and_ha_kecil">Huruf yang keluar dari tenggorokan tengah adalah ‘Ain (ع) dan Ha kecil (ح).</string>
        <string name="content_aljauf_ghain_and_kha">Huruf yang keluar dari tenggorokan atas adalah ghain (غ), kha (خ).</string>

    <string name="title_material_al_halq">Al-Halq - Tenggorokan</string>
    
    <string name="title_material_al_lisan_depan">Al-Lisan - Lidan (depan)</string>
        <string name="content_allisan_ta_dal_tho">Posisi makhraj Tha’, Dal dan Ta’ ( ط،د،ت ) adalah ujung lidah bersama pangkal-pangkal gigi-gigi seri bagian atas.</string>
        <string name="content_allisan_za_zal_tsa_">Posisi makhraj Tsa’, Żal, Ẓa’ ( ظ،ذ،ث ) adalah ujung lidah dengan ujung gigi seri bagian atas.</string>
        <string name="content_allisan_sin_zai_shad">Posisi makhraj Sin, Za’, Shad ( ص،ز,س ) adalah ujung lidah bersama lapisan bagian dalam gigi-gigi seri bagian bawah. Huruf keluar dari atasnya melalui gigi-gigi seri bagian atas dan bawah</string>

    <string name="title_material_al_lisan_tengah">Al-Lisan - Lisan (tengah)</string>
        <string name="content_allisan_ro">Makhraj ra’ adalah dari ujung lidah berikut gigi seri yang sejajar, hampir mendekati makhraj nun. Ra’ tebal disertai suara dari dalam kerongkongan pada lidah bagian tengah dan penyempitan pada tenggorokan. Berbeda dengan ra’ tipis</string>
        <string name="content_allisan_lam">Makhraj lam adalah dari dua tepi lidah paling luar hingga ujung lisan. Lam tebal ketika dilafalkan disertai suara dari dalam kerongkongan dibagian tengah lidah dan penyempitan pada tenggorokan. Berbeda dengan lam tipis</string>
        <string name="content_allisan_nun">Makhraj nun adalah dari ujung lidah dan gusi yang sejajar dengannya, sedikit dibawah makhraj lam, disertai dengungan(ghunnah) dari rongga hidung. Ulama menyebut nun dibagian lidah sebagai an-nishful mukammal (separuh yang dilengkapi), dan bagian nun pada rongga hidung sebagai annishful mukammil (separuh yang melengkapi).</string>
        <string name="content_allisan_jim">Makhraj Jim adalah bagian tengah lidah dan bagian tengah langit-langit mulut paling atas.</string>
        <string name="content_allisan_syin">Makhraj Syin adalah bagian tengah lidah dan bagian langit-langit mulut paling atas.</string>
        <string name="content_allisan_ya">Makhraj ya’ yang bukan mad adalah dari bagian tengah lidah dan bagian tengah langit-langit mulut paling atas. Tekanan suara ya’ yang bukan mad lebih banyak daripada saat dibaca Panjang.</string>
        <string name="content_allisan_dhod">Makhraj dhad adalah tepi lidah serta sekitar gigi geraham atas.</string>

    <string name="title_material_al_lisan_belakang">Al-Lisan - Lidah (belakang)</string>
        <string name="content_allisan_kaf">Makhraj Kaf adalah bagian lidah paling dalam, langit-langit mulut yang berdaging dan bertulang.</string>
        <string name="content_allisan_qof">Makhraj Qaf adalah bagian lidah paling dalam dan langit-langit mulut yang berdaging.</string>

    <string name="title_material_asy_syafatan">Asy-Syafatan - Kedua Bibir</string>
        <string name="content_asysyafatan_fa">Makhraj fa’ adalah dari bagian dalam bibir bawah Bersama ujung gigi seri bagian atas.</string>
        <string name="content_asysyafatan_ba">Makhraj ba’ adalah dengan merapatkan kedua bibir.</string>
        <string name="content_asysyafatan_mim">Makhraj mim adalah dengan merapatkan kedua bibir disertai dengungan dari rongga hidung. Ulama menyebut bagian mim pada bibir sebagai an-nishful Mukammal (separuh yang dilengkapi), dan bagian mim pada rongga hidung bagian belakang sebagai an-nishful Mukammil (separuh yang melengkapi).</string>
        <string name="content_asysyafatan_waw">Makhraj wawu bukan mad adalah dengan menggabungkan dua bibir ke depan dengan mengangkat lidah bagian paling dalam. Tekanan suara wawu yang bukan mad lebih banyak daripada saat dibaca Panjang.</string>

    <string name="title_material_al_khaisyum">Al-Khaisyum - Pangkal Hidung</string>

        <!--    Sub-title for Chapter Two Material section - Al-halq-->
        <string name="alif_sub_title">ا</string>
        <string name="ha_tebal_sub_title">ه</string>
        <string name="ain_sub_title">ع</string>
        <string name="ha_tipis_sub_title">ح</string>
        <string name="ghain_sub_title">غ</string>
        <string name="kho_sub_title">خ</string>

        <!--    Sub-title for Chapter Two Material section - Al-lisan depan-->
        <string name="ta_sub_title">ت</string>
        <string name="dal_sub_title">د</string>
        <string name="tho_sub_title">ط</string>
        <string name="tsa_sub_title">ث</string>
        <string name="dzal_sub_title">ذ</string>
        <string name="dzo_sub_title">ظ</string>
        <string name="sin_sub_title">س</string>
        <string name="zai_sub_title">ز</string>
        <string name="shod_sub_title">ص</string>

        <!--    Sub-title for Chapter Two Material section - Al-lisan tengah-->
        <string name="ro_sub_title">ر</string>
        <string name="lam_sub_title">ل</string>
        <string name="nun_sub_title">ن</string>
        <string name="jim_sub_title">ج</string>
        <string name="syin_sub_title">ش</string>
        <string name="ya_sub_title">ي</string>
        <string name="dhod_sub_title">ض</string>

        <!--    Sub-title for Chapter Two Material section - Al-lisan belakang-->
        <string name="kaf_sub_title">ك</string>
        <string name="qof_sub_title">ق</string>

        <!--    Sub-title for Chapter Two Material section - Asy-Syafatan-->
        <string name="fa_sub_title">ف</string>
        <string name="ba_sub_title">ب</string>
        <string name="mim_sub_title">م</string>
        <string name="waw_sub_title">و</string>

    <!--    Title for Chapter 3 Material section-->
    <string name="title_material_sifat_huruf">Sifat Huruf</string>
        <!--    Sub-title for Chapter 3 Material section-->
        <string name="berlawanan_sub_title">Berlawanan</string>
        <string name="tidak_berlawanan_sub_title">Tidak Berlawanan</string>

    <string name="title_material_hukum_bacaan">Hukum Bacaan</string>
        <string name="nun_mati">Nun Mati / Tanwin</string>
        <string name="mim_mati">Mim Mati</string>

    <string name="title_material_hukum_idgham">Hukum Idgham</string>

    <string name="title_material_lam_tarif">Lam Ta\'rif</string>

    <string name="title_material_hukum_mad">Hukum Mad</string>
        <string name="mad_thabii">Mad Thabi\'i</string>
        <string name="mad_fari">Mad Far\'i</string>


    <string name="title_material_tafkhim_tarqiq">Tafkhim &amp; Tarqiq</string>">
        <string name="tafkhim_sub_title">Tafkhim (Tebal)</string>
        <string name="tarqiq_sub_title">Tarqiq (Tipis)</string>

    <string name="title_material_tanda_waqaf">Tanda Waqaf</string>

    <string name="title_material_ayat_gharibah">Ayat Gharibah</string>


</resources>