<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.siaptekno.tahsinmqi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_alquran"
        android:name="com.siaptekno.tahsinmqi.ui.alquran.AlquranFragment"
        android:label="@string/title_alquran"
        tools:layout="@layout/fragment_surah_list">
        <action
            android:id="@+id/action_alquranFragment_to_alquranDetailFragment"
            app:destination="@id/alquranDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/alquranDetailFragment"
        android:name="com.siaptekno.tahsinmqi.ui.alqurandetail.AlquranDetailFragment"
        android:label="fragment_alquran_detail"
        tools:layout="@layout/fragment_surah_detail" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.siaptekno.tahsinmqi.ui.schedule.JadwalSholatFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_surah_detail" >
    </fragment>

    <fragment
        android:id="@+id/navigation_material"
        android:name="com.siaptekno.tahsinmqi.ui.materi.MaterialFragment"
        android:label="@string/title_material"
        tools:layout="@layout/fragment_materi" >
    </fragment>

    <fragment
        android:id="@+id/navigation_sub_material_chapter_two"
        android:name="com.siaptekno.tahsinmqi.ui.materi.chapter_two.SubMaterialChapterTwoFragment"
        android:label="@string/title_sub_material_chapter_two"
        tools:layout="@layout/fragment_sub_materi_chapter_2" >
    </fragment>


</navigation>