<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_material_al_jauf_ghain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/materi_ghain"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_small"
        android:paddingHorizontal="@dimen/padding_extra_large"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/greenish"
            android:text="@string/audio"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_contoh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/greenish"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:text="@string/contoh"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/greenish"
            android:text="@string/stop"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/text_size_body"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/content_aljauf_ghain_and_kha"/>

</LinearLayout>