<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.materi.chapter_two.al_halq.MateriAlHalqFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/greenish"
        app:navigationIcon="@drawable/ic_back_24"
        app:title="@string/title_material_al_halq"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <!--    Fragment Pemasukan/Pengeluaran-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_alif"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/greenish"
            android:fontFamily="@font/uthmani_bold"
            android:text="@string/alif_sub_title"
            android:textSize="@dimen/text_size_heading_small"
            android:textStyle="bold"
            app:cornerRadius="0dp"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ha_tebal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/greenish"
            android:fontFamily="@font/uthmani_bold"
            android:text="@string/ha_tebal_sub_title"
            android:textSize="@dimen/text_size_heading_small"
            android:textStyle="bold"
            app:cornerRadius="0dp"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/greenish"
            android:fontFamily="@font/uthmani_bold"
            android:text="@string/ain_sub_title"
            android:textSize="@dimen/text_size_heading_small"
            android:textStyle="bold"
            app:cornerRadius="0dp"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ha_tipis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/greenish"
            android:fontFamily="@font/uthmani_bold"
            android:text="@string/ha_tipis_sub_title"
            android:textSize="@dimen/text_size_heading_small"
            android:textStyle="bold"
            app:cornerRadius="0dp"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ghain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/greenish"
            android:fontFamily="@font/uthmani_bold"
            android:text="@string/ghain_sub_title"
            android:textSize="@dimen/text_size_heading_small"
            android:textStyle="bold"
            app:cornerRadius="0dp"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_kho_tebal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/greenish"
            android:fontFamily="@font/uthmani_bold"
            android:text="@string/kho_sub_title"
            android:textSize="@dimen/text_size_heading_small"
            android:textStyle="bold"
            app:cornerRadius="0dp"></com.google.android.material.button.MaterialButton>
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fc_material_chapter_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"></androidx.fragment.app.FragmentContainerView>


</LinearLayout></LinearLayout>