<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    app:cardCornerRadius="@dimen/corner_radius_small"
    app:cardElevation="@dimen/elevation_low"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/tv_surah_number"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/placeholder_surah_number"
            android:textSize="@dimen/text_size_caption"
            android:background="@drawable/img_number_bg"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/tv_surah_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_surah_name"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/text_size_heading_small" />

            <TextView
                android:id="@+id/tv_surah_total_verse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/placeholder_surah_total_verse"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/text_size_body" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
